[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Explosion.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 5.0

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.55
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.11
scale_random = 0.1
color = Color( 0.658824, 0.447059, 0, 1 )
hue_variation = 0.4
hue_variation_random = 0.25

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0.917647, 0.670588, 0.145098, 1 )
emission_energy = 1.77
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.1
height = 0.2
radial_segments = 5
rings = 5

[node name="Explosion" type="Spatial"]
script = ExtResource( 1 )

[node name="HitBox" type="Area" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="HitBox"]
shape = SubResource( 1 )

[node name="Particles" type="Particles" parent="."]
cast_shadow = 0
emitting = false
amount = 50
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
